UtahLiveDataTest/src/objects/TaskScheduleUser__c.object
<CustomObject>
    <description>[Business] Maps the Task to a specific User (Can be DOH specific need more details)</description>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskID__c</fullName>
        <description>Task ID associated with user.</description>
        <externalId>true</externalId>
        <label>Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskScheduleGroup__c</fullName>
        <label>Task Schedule Group</label>
        <referenceTo>TaskScheduleGroup__c</referenceTo>
        <relationshipLabel>Task Schedule User</relationshipLabel>
        <relationshipName>Task_Schedule_User</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TimelineUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task Schedule User</label>
    <nameField>
        <displayFormat>TUN-{0000}</displayFormat>
        <label>Task Schedule User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Schedule User</pluralLabel>
    <recordTypes>
        <fullName>Approver</fullName>
        <active>true</active>
        <label>Approver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Owner</fullName>
        <active>true</active>
        <label>Owner</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>